--- a/traductionEN.html
+++ b/traductionEN.html
@@ -44,6 +44,14 @@
     <li class="xp">french - mother tongue </li>
     <li class="xp">fluent english</li>
   </ul>
+  <aside>
+    <a href="http://www.behance.net/aliceokodomo" target="_blank">
+      <img src="images/logobehance.png" class="pictoRS" alt="logo behance"/>
+    </a>
+    <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
+      <img src="images/logolinkedin.png" class="pictoRS" alt="logo linked in"/>
+    </a>
+  </aside>
   <h3 class="xp">Hobbies :</h3>
   <p class="xp"> art, new technologies, cinema, horseriding, acupuncture.
   </p>
