--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <ul>
       <li>Installation LINUX Ubuntu sur PC</li>
       <li>HTML, CSS, ligne de commande, ATOM, Wordpress</li>
-      <li>GitHub <a href="https://github.com/aliceokodomo" class="link" target="_blank">github.com/aliceokodomo</a></li>
+
+      <li>GitHub<a href="https://github.com/aliceokodomo" class="link" target="_blank">
+      <aside class=""> <img src="GitHub-Mark-Light-120px-plus.png" alt="logo github"/></a></li></aside>
+      </a>
+
     </ul>
     <h3>DIRECTION ARTISTIQUE</h3>
     <p class="location">Alice MARTINA SAS | Paris | depuis 2014</p>
@@ -39,18 +43,16 @@
     </div>
     <h3 class="xp">Langues :</h3>
     <ul class="xp">
-      <li class="xp">français maternelle </li>
+      <li class="xp">français maternelle</li>
       <li class="xp">anglais courant</li>
     </ul>
     <aside>
-      <p>
-        <a href="http://www.behance.net/aliceokodomo" target="_blank">
-          <img src="images/logobehance.png" class="pictoRS" alt="logo behance"/>
-        </a>
-        <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
-          <img src="images/logolinkedin.png" class="pictoRS" alt="logo linked in"/>
-        </a>
-      </p>
+      <a href="http://www.behance.net/aliceokodomo" target="_blank">
+        <img src="images/logobehance.png" class="pictoRS" alt="logo behance"/>
+      </a>
+      <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
+        <img src="images/logolinkedin.png" class="pictoRS" alt="logo linked in"/>
+      </a>
     </aside>
     <h3 class="xp">Intérêts :</h3>
     <p class="xp"> art, nouvelles technologies, cinéma, équitation, acupuncture.
