update of my files and index.html

--- a/index.html
+++ b/index.html
@@ -3,61 +3,67 @@
 <head>
   <meta charset="utf-8">
   <title>cv Alice MARTINA webdev</title>
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="pretty.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<header>
-  <button name="button">EN</button>
-</header>
 <body>
-
-  <img src="https://photos.app.goo.gl/nn6oo5HBEwBTN6fPA" alt>
-
+  <header>
+    <img
+    src="/home/alicemartina/Documents/Exercices/cv/images/portrait_alicemartina.jpg"
+    alt="[copyright Nicola Delorme 2015, portrait d'Alice MARTINA]"/>
+    <nav class="navigation">
+      <a href="traductionEN.html" class="link">EN</a>
+    </nav>
+  </header>
   <h1>Alice MARTINA</h1>
   <p id="tagline">développeuse web junior</p>
-
   <p>Diplomée de l’école des arts appliqués Duperré en 2005, actuellement en formation à Paris 20 avec Les Descodeuses, je suis à la recherche d’un premier emploi en tant que développeuse web junior.</p>
-
   <h2>Expériences</h2>
-
   <div class="xp">
     <h3>Formation webdev </h3>
     <p class="location">Les Descodeuses | PARIS | 2021</p>
-
     <p>Apprendre les langages web et à faire des recherches en FrontEnd.</p>
-
     <ul>
       <li>Installation LINUX Ubuntu sur PC</li>
       <li>HTML, CSS, ligne de commande, ATOM, Wordpress</li>
-      <li>GitHub <a href="https://github.com/aliceokodomo" target="_blank">github.com/aliceokodomo</a></li>
-    </ul>
 
+      <li>GitHub<a href="https://github.com/aliceokodomo" class="link" target="_blank">
+      <aside class=""> <img src="GitHub-Mark-Light-120px-plus.png" alt="logo github"/></a></li></aside>
+      </a>
+
+    </ul>
     <h3>DIRECTION ARTISTIQUE</h3>
     <p class="location">Alice MARTINA SAS | Paris | depuis 2014</p>
-
-    <p>Conseil en stratégie de communication graphique, motion design, production d’images, direction de création, festival de mode et design d’objet, en France et à l’étranger.</p>
-    <h3 class="xp"> LOGICIELS:</h3>
-    <ul>
-      <li class="xp">Adobe Illustrator, Photoshop, Indesign + 10 ans d’expérience</li>
-      <li class="xp">Adobe After Effect, XD, Spark + 1 an d’expérience  </li>
+    <p>Conseil en stratégie de communication graphique, motion design, production d’images, direction de création, festival de mode et design d’objet, en France et à l’étranger.
+      <a href="https://alicemartinadfd8.myportfolio.com/" class="link" target="_blank">voir le portfolio créa</a></p>
+      <h3 class="xp"> LOGICIELS:</h3>
+      <ul>
+        <li class="xp">Adobe Illustrator, Photoshop, Indesign + 10 ans d’expérience</li>
+        <li class="xp">Adobe After Effect, XD, Spark + 1 an d’expérience  </li>
+      </ul>
+    </div>
+    <h3 class="xp">Langues :</h3>
+    <ul class="xp">
+      <li class="xp">français maternelle</li>
+      <li class="xp">anglais courant</li>
     </ul>
-  </div>
-  <h3 class="xp">Langues :</h3>
-  <ul class="xp">
-    <li class="xp">français maternelle </li>
-    <li class="xp">anglais courant</li>
-  </ul>
-  <h3 class="xp">Intérêts :</h3>
-  <p class="xp"> art, nouvelles technologies, cinéma, équitation, acupuncture.
-  </p>
-  <p>
-    <h3 class="xp">Voyages : </h3>
-    <p class="xp"> Japon, Maroc, Emirats Arabes Unis, Etats-Unis, Afghanistan, Inde, Népal, Sri Lanka, Côte d’Ivoire, Israël, Pays-Bas, Suisse, Royaume-Uni, Allemagne, Espagne, Italie, Bahreïn.
+    <aside>
+      <a href="http://www.behance.net/aliceokodomo" target="_blank">
+        <img src="images/logobehance.png" class="pictoRS" alt="logo behance"/>
+      </a>
+      <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
+        <img src="images/logolinkedin.png" class="pictoRS" alt="logo linked in"/>
+      </a>
+    </aside>
+    <h3 class="xp">Intérêts :</h3>
+    <p class="xp"> art, nouvelles technologies, cinéma, équitation, acupuncture.
     </p>
-    <footer>
-      <h2>Contact</h2>
-      <a href="tel:0033608404419">06 61 34 36 07</a> – <a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
-    </footer>
-  </body>
-
-  </html>
+    <p>
+      <h3 class="xp">Voyages : </h3>
+      <p class="xp"> Japon, Maroc, Emirats Arabes Unis, Etats-Unis, Afghanistan, Pakistan, Inde, Népal, Sri Lanka, Côte d’Ivoire, Israël, Pays-Bas, Suisse, Royaume-Uni, Allemagne, Espagne, Italie, Bahreïn, Palma de Majorque, Cuba.
+      </p>
+      <footer>
+        <h2>Contact</h2>
+        <a href="tel:0033608404419">06 61 34 36 07</a> – <a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
+      </footer>
+    </body>
+    </html>
