--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
+  <!-- Bootstrap link to CSS sur le serveur bootstrap ou en local-->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 <body>
