--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
-  <!-- Bootstrap link to CSS sur le serveur bootstrap ou en local-->
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <!-- Bootstrap link to CSS sur le serveur bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -46,46 +46,48 @@
         <!--  <a class="navbar-brand" href="#">
         ALICE MARTINA </a>-->
         <!-- first ALICE MARTINA as a link to the home page-->
-        <a class="nav-link active" aria-current="page" href="#">ALICE MARTINA</span></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">  <a class="nav-link active" aria-current="page" href="#">ALICE MARTINA</span></a>
+            </li>
             <!--  <li class="nav-item">
-               <a class="nav-link active" aria-current="page" href="#">home</span></a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link active" href="indexEN.html" target="_blank">online cv</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">cv to print</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link active" href=mailto:hello@alicemartina.com tabindex="-1" aria-disabled="true">contact</a>
+            <a class="nav-link active" aria-current="page" href="#">home</span></a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link active" href="indexEN.html" target="_blank">online cv</a>
           </li>
-  <li class="nav-item">
-              <a href="https://www.behance.net/aliceokodomo" target="_blank">
-                <img src="images\pictoRS-12.png" class="nav-link active" alt="picto behance" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-              </img>
-              </a></li>
-  <li class="nav-item">
-              <a href="https://github.com/aliceokodomo" target="_blank">
-                <img src="images\pictoRS-15.png" class="nav-link active" alt="picto github" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-                </img>
-              </a></li>
-  <li class="nav-item">
-              <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
-                <img src="images\pictoRS-14.png" class="nav-link active" alt="picto linkedin" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-                </img>
-              </a></li>
-  </ul>
-  <!--    <form class="d-flex">
-  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-  <button class="btn btn-outline-success" type="submit">Search</button>
-</form>-->
-</div>
-</div>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">cv to print</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="mailto:hello@alicemartina.com" tabindex="-1" aria-disabled="true">contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.behance.net/aliceokodomo" target="_blank">
+              <img src="images\pictoRS-12.png" class="nav-link active" alt="picto behance" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
+            </img>
+          </a></li>
+          <li class="nav-item">
+            <a href="https://github.com/aliceokodomo" target="_blank">
+              <img src="images\pictoRS-15.png" class="nav-link active" alt="picto github" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
+            </img>
+          </a></li>
+          <li class="nav-item">
+            <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
+              <img src="images\pictoRS-14.png" class="nav-link active" alt="picto linkedin" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
+            </img>
+          </a></li>
+        </ul>
+        <!--    <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>-->
+    </div>
+  </div>
 </nav>
 </header>
 
