--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">  <a class="nav-link active" aria-current="page" href="#">ALICE MARTINA</span></a>
+            <li class="nav-item">  <a class="nav-link active" aria-current="page" href="#">ALICE MARTINA</a>
             </li>
             <!--  <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">home</span></a>
@@ -68,18 +68,15 @@
           </li>
           <li class="nav-item">
             <a href="https://www.behance.net/aliceokodomo" target="_blank">
-              <img src="images\pictoRS-12.png" class="nav-link active" alt="picto behance" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-            </img>
+              <img src="images\pictoRS-12.png" class="nav-link active" alt="picto behance" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true"></img>
           </a></li>
           <li class="nav-item">
             <a href="https://github.com/aliceokodomo" target="_blank">
-              <img src="images\pictoRS-15.png" class="nav-link active" alt="picto github" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-            </img>
+              <img src="images\pictoRS-15.png" class="nav-link active" alt="picto github" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true"></img>
           </a></li>
           <li class="nav-item">
             <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
-              <img src="images\pictoRS-14.png" class="nav-link active" alt="picto linkedin" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true">
-            </img>
+              <img src="images\pictoRS-14.png" class="nav-link active" alt="picto linkedin" width="40" height="40" preserveAspectRatio="xMidYMid slice" focusable="true"></img>
           </a></li>
         </ul>
         <!--    <form class="d-flex">
