--- a/indexEN.html
+++ b/indexEN.html
@@ -68,7 +68,8 @@
             <img src="images/pictoRS-04.png" alt="logo linked in"/>
           </a>
         </aside>
-        <a href="tel:0033661343607">06 61 34 36 07</a> – <a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
+       <!-- <a href="tel:0033661343607">06 61 34 36 07</a> –->
+<a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
       </footer>
     </body>
     </html>
