--- a/index_cvFR.html
+++ b/index_cvFR.html
@@ -62,13 +62,14 @@
       <p class="xp"> Japon, Maroc, Emirats Arabes Unis, Etats-Unis, Afghanistan, Pakistan, Inde, Népal, Sri Lanka, Côte d’Ivoire, Israël, Pays-Bas, Suisse, Royaume-Uni, Allemagne, Espagne, Italie, Bahreïn, Palma de Majorque, Cuba.
       </p>-->
       <footer>
-        <h2>Contact</h2><aside>
+        <h2>Contact</h2>
+        <a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
+        <aside>
           <a href="https://www.linkedin.com/in/alicemartina/" target="_blank">
             <img src="images/pictoRS-04.png" alt="logo linked in"/>
           </a>
         </aside>
        <!-- <a href="tel:0033661343607">06 61 34 36 07</a> –-> 
-<a href="mailto:hello@alicemartina.com">hello@alicemartina.com</a> – <a href="https://alicemartina.com" target="_blank">alicemartina.com</a>
       </footer>
     </body>
     </html>
