--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Learning to learn with Technology, <span class="text-muted"> PARIS | 2021 </span></h2>
-          <p class="lead">Web development | professionnal training @Descodeuses / Based on Agile methotology, the community of women start learning to code and search on the web as future professionnal web developper. Working on LINUX Ubuntu, windows, Mac OS, with HTML, CSS, terminal command line, ATOM, Wordpress, GitHub, Bootstrap for now. More for the next months on JavaScript, JQuery, unitary test, Frameworks JS, PHP, SQL, POO, UML, PDO.
+          <p class="lead">Web development | professional training @Descodeuses / Based on Agile methodology, the community of women start learning to code and search on the web as a future professional web developper. Working on LINUX Ubuntu, windows, Mac OS, with HTML, CSS, terminal command line, ATOM, Wordpress, GitHub, Bootstrap for now. More for the next months on JavaScript, JQuery, unitary test, Frameworks JS, PHP, SQL, POO, UML, PDO.
           </p>
         </div>
         <div class="col-md-5">
